REGRESSION(285310@main): [GTK] Cannot open links on various websites https://bugs.webkit.org/show_bug.cgi?id=282409

Reviewed by Adrian Perez de Castro.

Since 285310@main the new web views created for a related view on
WebKit::create signal will not share the web process if noopener is
present. So, we need to remove the check that ensured that.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewCreateNewPage):

Canonical link: https://commits.webkit.org/286275@main